Fixes display bugs
The width of article's images was not good.
The visual focus on the "content" field when writing an article did not fit well with Chrome and Safari.

--- a/nouvelles/static/nouvelles/css/components/code.less
+++ b/nouvelles/static/nouvelles/css/components/code.less
@@ -1,4 +1,16 @@
-@import "../vendor/spectre/src/variables";
+@import "../../vendor/spectre/src/variables";
+
+pre {
+  code {
+    background-color: @bg-color;
+    color: inherit;
+    display: block;
+    line-height: inherit;
+    overflow-x: auto;
+    padding: 2rem;
+    width: 100%;
+  }
+}
 
 .highlight {
   .hll { background-color: @highlight-color }
